@@ -27,7 +27,7 @@
 
 -->
 <makefile>
-    
+
     <!-- =============================================================== -->
     <!--                       Configuration:                            -->
     <!-- =============================================================== -->
@@ -65,6 +65,7 @@
     <option name="DEPS_TRACKING"><values>0,1</values></option>
     <option name="GCC_PCH"><values>0,1</values></option>
     <option name="ICC_PCH"><values>0,1</values></option>
+    <option name="ICC_PCH_USE_SWITCH"><values>-use-pch,-pch-use</values></option>
     <option name="USE_PCH"><values>0,1</values></option>
     <option name="BK_DEPS"/>
     <option name="BK_MAKE_PCH"/>
@@ -77,7 +78,7 @@
     <option name="PLATFORM_MACOSX"/>
     <option name="PLATFORM_OS2"/>
     <option name="PLATFORM_BEOS"/>
-    
+
     <option name="srcdir" never_empty="1"/>
     <option name="top_srcdir"/>
     <option name="top_builddir"/>
@@ -96,7 +97,7 @@
     <set var="DLLDIR">$(dlldir)</set>
     <set var="DATADIR">$(datadir)</set>
     <set var="INCLUDEDIR">$(includedir)</set>
-   
+
     <!-- the initial value of SRCDIR set in dirs.bkl is incorrect for autoconf
          format, so correct it here: -->
     <set var="SRCDIR">$(srcdir)</set>
@@ -108,7 +109,7 @@
     <option name="DLLPREFIX_MODULE"/>
 
     <option name="LIBS"/>
-    <option name="LDFLAGS_GUI"/>   
+    <option name="LDFLAGS_GUI"/>
     <set var="__FLAG_EXE_GUI">$(LDFLAGS_GUI)</set>
 
     <set var="PIC_CFLAGS">$(PIC_FLAG)</set>
@@ -139,7 +140,7 @@
         <if cond="DEPS_TRACKING=='1'">$(BK_DEPS) $(CXX)</if>
         <if cond="DEPS_TRACKING=='0'">$(CXX)</if>
     </set>
-    
+
     <!-- =============================================================== -->
     <!--                    Load makefile meta-backend:                  -->
     <!-- =============================================================== -->
@@ -152,23 +153,23 @@
     <set var="__macexe_baset">__autoconf_baset</set>
     <set var="__dll_baset">__autoconf_baset</set>
     <set var="__lib_baset">__autoconf_baset</set>
-    
+
     <include file="makefile_macres.bkl"/>
     <set var="__exe_baser">__macexe</set>
 
     <include file="unixlike.bkl"/>
     <!-- autoconf can be used to compile win32 apps, too: -->
-    <include file="makefile_mingw.bkl"/>    
+    <include file="makefile_mingw.bkl"/>
     <!-- and OS/2 as well: -->
-    <include file="makefile_os2.bkl"/>    
+    <include file="makefile_os2.bkl"/>
 
 
     <set var="DESTDIR" make_var="1"></set>
-    
+
     <!-- =============================================================== -->
     <!--                   Compiler-specific tags:                       -->
     <!-- =============================================================== -->
-    
+
     <define-tag name="cppflags-unix" rules="exe,lib,dll,module">
         <cppflags>$(value)</cppflags>
     </define-tag>
@@ -181,7 +182,7 @@
     <define-tag name="ldflags-unix" rules="exe,dll,module">
         <ldflags>$(value)</ldflags>
     </define-tag>
-    
+
 
     <!-- =============================================================== -->
     <!--               Shared libs/DLLs handling:                        -->
@@ -198,7 +199,7 @@
         <set var="__soversion3">$(value.split('.')[2])</set>
 
         <set var="__linkname1">$(__linkname)</set>
-        
+
         <set var="__targetsuf2">
             <if cond="USE_SOVERSION=='1' and PLATFORM_MACOSX=='0'">
                 $(DLLEXT).$(__soversion1)
@@ -211,7 +212,7 @@
         <set var="__linkname2" eval="0">
             $(DLLPREFIX)$(__dllname)$(__targetsuf2)
         </set>
-        
+
         <set var="__targetsuf3">
             <if cond="USE_SOVERSION=='1' and PLATFORM_MACOSX=='0' and USE_SOVERCYGWIN=='0'">
                 $(DLLEXT).$(__soversion1).$(__soversion2).$(__soversion3)
@@ -227,7 +228,7 @@
         <set var="__targetname" eval="0">
             $(DLLPREFIX)$(__dllname)$(__targetsuf3)
         </set>
-        
+
         <set var="__soname_flags">
             <if cond="USE_SOVERLINUX=='1'"> <!-- Linux -->
                 $(SONAME_FLAG)$(__linkname2)
@@ -259,14 +260,14 @@
             </if>
         </set>
         <__command>$(LF)$(__so_symlinks_cmd)</__command>
-    
+
         <set var="__mac_instname">$(__linkname2)</set>
-   
+
         <clean-files>
             $(ref('__targetdir',id))$(ref('__linkname1', id)) $(ref('__targetdir',id))$(ref('__linkname2', id))
-        </clean-files>       
+        </clean-files>
     </define-tag>
-    
+
     <define-tag name="mac_version" rules="dll">
         <set var="__macvercur">$(value)</set>
         <set var="__macvercompat">$('.'.join(value.split('.')[0:2]))</set>
@@ -296,7 +297,7 @@
             <command>(cd $(DESTDIR)$(value) ; $(ref('__so_symlinks_uninst_cmd',id)))</command>
         </modify-target>
     </define-tag>
-    
+
     <define-tag name="libname" rules="dll">
         <set var="__importlib">
             <if cond="WINDOWS_IMPLIB=='1'">-Wl,--out-implib=$(__targetdir)$(__linkname)</if>
@@ -304,19 +305,19 @@
         </set>
         <ldflags>$(__importlib)</ldflags>
     </define-tag>
-        
-        
+
+
     <define-tag name="library" rules="exe,dll,module">
-        <!-- 
+        <!--
          The standard version which adds full filename of the library to
          linker's command line  doesn't work on BSD Unix where the linker
          doesn't like being given shared library as e.g. lib/foo.so - it's then
          recorded as lib/foo.so instead of foo.so in ELF binary.
-         
+
          For details, see here:
          http://sourceforge.net/tracker/?func=detail&aid=1009662&group_id=83016&atid=568029
          -->
-        
+
         <!-- It has to be inserted as the first -L, so the we won't
              link against library version in some other directory: -->
         <set var="__ldflags" prepend="1">
@@ -330,8 +331,8 @@
                          'LIBR'))
         </ldlibs>
     </define-tag>
-    
-    
+
+
     <!-- =============================================================== -->
     <!--              GCC >= 3.4 precompiled headers support:            -->
     <!-- =============================================================== -->
@@ -340,7 +341,7 @@
               position="before:precomp-headers-header"/>
     <tag-info name="precomp-headers-header"
         position="before:precomp-headers"/>
-    
+
     <define-tag name="precomp-headers-file" rules="__compiled">
         <set var="__pch_file">$(value)</set>
     </define-tag>
@@ -356,7 +357,7 @@
                 Precompiled header must explicitly be provided using &lt;precomp-headers-header&gt; for Autoconf backend.
                 </error>
             </if>
-            
+
             <set var="__gcc_pch_dir">
                 $(BUILDDIR)/.pch$(addPrefixIfNotEmpty('/', __pch_file))
             </set>
@@ -366,8 +367,8 @@
             <!-- must look into this directory first: -->
             <set var="PCH_INC">
                 <if cond="GCC_PCH=='1'">-I$(__gcc_pch_dir)</if>
-                <if cond="ICC_PCH=='1'">-use_pch $(__gcc_pch_file)</if>
-            </set> 
+                <if cond="ICC_PCH=='1'">$(ICC_PCH_USE_SWITCH) $(__gcc_pch_file)</if>
+            </set>
             <set var="__cppflags">$(PCH_INC) $(__cppflags)</set>
 
             <set var="__gcc_pch_cmd" eval="0">
@@ -384,14 +385,14 @@
                         $(BK_MAKE_PCH) $(__gcc_pch_file) $(__pch_header) $(ref("__gcc_pch_cmd",id))
                     </command>
                 </modify-target>
-            </if> 
+            </if>
 
             <objects-depend>$(__gcc_pch_file)</objects-depend>
         </if>
     </define-tag>
-    
-    
-    
+
+
+
     <!-- =============================================================== -->
     <!--                     "make install-strip":                       -->
     <!-- =============================================================== -->
@@ -399,7 +400,7 @@
     <action id="install-strip">
         <depends>install</depends>
     </action>
-   
+
     <define-tag name="install-to" rules="dll,exe,module">
         <modify-target target="install-strip">
             <command>$(STRIP) $(DESTDIR)$(value)/$(ref('__targetname',id))</command>
@@ -407,7 +408,7 @@
     </define-tag>
 
     <tag-info name="installable" position="before:dir"/>
-    
+
     <define-tag name="installable" rules="subproject">
         <set var="__installable">$(value)</set>
     </define-tag>
@@ -424,20 +425,20 @@
         </modify-target>
         </if>
     </define-tag>
-    
-    
+
+
     <!-- =============================================================== -->
     <!--                         "make clean":                           -->
     <!-- =============================================================== -->
 
     <action id="clean" template="__phony">
         <set var="__builddir" eval="0">$(BUILDDIR)</set>
-        <command>            
+        <command>
             rm -rf $(__builddir)/.deps $(__builddir)/.pch
             $(RM) $(__builddir)/*$(OBJEXT)
         </command>
     </action>
-    
+
     <!-- =============================================================== -->
     <!--                       "make distclean":                         -->
     <!-- =============================================================== -->
@@ -448,7 +449,7 @@
             $(RM) config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
         </command>
     </action>
-    
+
     <!-- the <dir> tag needs to be specified for any <subproject> so we
          use it to add to "distclean" target the additional rm command -->
     <define-tag name="dir" rules="subproject">
@@ -464,12 +465,12 @@
     <!-- =============================================================== -->
     <!--                       Generate output:                          -->
     <!-- =============================================================== -->
-    
+
     <!-- see format_features.bkl for explanation: -->
     <set var="FORMAT_OUTPUT_VARIABLES">
-        __targetdir __targetname __deps __command __is_phony 
+        __targetdir __targetname __deps __command __is_phony
         AUTOCONF_CHECKS DESTDIR
-    </set>    
+    </set>
     <set var="FORMAT_NEEDS_OPTION_VALUES_FOR_CONDITIONS">0</set>
 
     <set var="AUTOCONF_MACROS_FILE">
